Customize setting for usage on machines of ZB
* Remove un-related files from git

*Set up output dir for the project

--- a/facefusion.ini
+++ b/facefusion.ini
@@ -1,7 +1,7 @@
 [general]
-source_paths =
-target_path =
-output_path =
+source_paths =./../data/source
+target_path = ./../data/target
+output_path = ./../data/output
 
 [misc]
 force_download =
